# MitsubishiCN105ESPHome

./: .gitignore  ESP-IDF-5.4.1-GPIO-WORKAROUND.md  MitsubishiCN105ESPHome.code-workspace  README.md  esp32-test.yaml  hacs.json  hp-debug.yaml  hp-sejour.yaml
.github/workflows/: build.yaml
M5-AtomS3Lite/: heatpump-m5-AtomS3Lite.yaml
M5-AtomS3Lite/common/: heatpump-climate.yaml  sensors.yaml  wifi.yaml
atoms3/: Readme.md  atom-m5.yaml
atoms3/includes/: climate-config.yaml  diag-sensor-config.yaml  display_config.yaml  fonts.yaml  ha-integration-config.yaml  mqtt-config.yaml  sensor-config.yaml  wifi-config.yaml
atoms3lite/: Readme.md  m5-atoms3lite.yaml
atoms3lite/includes/: api-config.yaml  binary-sensor-config.yaml  climate-config.yaml  ha-integration-config.yaml  mqtt-config.yaml  sensor-config.yaml  wifi-config.yaml
components/cn105/: ControlManager.h  Globals.h  auto_sub_mode_sensor.h  climate.py  climateControls.cpp  cn105.cpp  cn105.h  cn105_mqtt_mim.cpp  cn105_mqtt_mim.h  cn105_mqtt_mim.py  cn105_protocol.h  cn105_types.h  componentEntries.cpp  compressor_frequency_sensor.h  cycle_management.cpp  cycle_management.h  error_code_sensor.h  extraComponents.cpp  frame_parser.h  functions_button.h  functions_number.h  functions_sensor.h  hardware_setting_select.cpp  hardware_setting_select.h  heatpumpFunctions.cpp  heatpumpFunctions.h  hp_readings.cpp  hp_writings.cpp  hvac_option_switch.h  info_request.cpp  info_request.h  input_power_sensor.h  isee_sensor.h  kwh_sensor.h  localization.h  operators.cpp  outside_air_temperature_sensor.h  remote_temp_source_info.h  request_scheduler.cpp  request_scheduler.h  (+8 more)
custom_components/mitsubishi_climate_proxy/: README.md  __init__.py  climate.py  config_flow.py  manifest.json  strings.json
custom_components/mitsubishi_hybrid/: README.md  __init__.py  climate.py  config_flow.py  manifest.json  strings.json
esphome/: hvac-sample.yaml
example-XiaoESP32S3/: README.md
example-XiaoESP32S3/common/: bt-proxy.yaml  heatpump-climate.yaml  heatpump-fanspeeds.yaml  heatpump-xiaoS3.yaml
example-dual setpoint/: README.md  climate-common-meta-thermostat.yaml  climate-common-non-climate.yaml  living-room-split-unit.yaml
examples/dual-setpoint/: climate-common-non-climate.yaml
examples/m5stack-atoms3/: atom-m5.yaml
myfirmware/: clim-chambre-awox.yaml
tests/unit/: CMakeLists.txt  test_calculate_temp.cpp  test_checksum.cpp  test_frame_parser.cpp  test_lookup_tables.cpp  test_protocol.cpp  test_real_frames.cpp  test_temperature.cpp  test_types.cpp
tests/unit/mocks/: esphome_stubs.h
(+13 files in other folders)
